Don't exit the GPU process if on a non-host TTY

Requests to the X11 server may be stalled if we switch away from the
TTY that is hosting the X server.  In this case, don't restart the GPU
process as it will become responsive again when we switch to its TTY.

BUG=355720

Review-Url: https://codereview.chromium.org/1991353002
Cr-Commit-Position: refs/heads/master@{#394957}

Former-commit-id: 9db5a0e3f53edfa3cc653d9d6f8476c17bc7d2b9